--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,4 @@
-#conteiner {
+#container {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -103,7 +103,7 @@ label {
   margin-left: 20px;
 }
 
-.conteiner-history {
+.container-history {
   padding-left: 20px;
   margin-left: 20px;
   margin-bottom: 10px;
@@ -119,10 +119,10 @@ label {
   padding-right: 10px;
   padding-top: 8px;
 }
-.conteiner-history .text {
+.container-history .text {
   width: 700px;
 }
-.conteiner-history .cross {
+.container-history .cross {
   cursor: pointer;
 }
 
@@ -130,8 +130,34 @@ label {
   width: 1em;
   height: 1em;
   background-color: rgba(99, 99, 254, 0.842);
-  -webkit-clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
-          clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+  -webkit-clip-path: polygon(
+    20% 0%,
+    0% 20%,
+    30% 50%,
+    0% 80%,
+    20% 100%,
+    50% 70%,
+    80% 100%,
+    100% 80%,
+    70% 50%,
+    100% 20%,
+    80% 0%,
+    50% 30%
+  );
+  clip-path: polygon(
+    20% 0%,
+    0% 20%,
+    30% 50%,
+    0% 80%,
+    20% 100%,
+    50% 70%,
+    80% 100%,
+    100% 80%,
+    70% 50%,
+    100% 20%,
+    80% 0%,
+    50% 30%
+  );
 }
 
 .link-history {
@@ -142,4 +168,4 @@ label {
 .logo {
   width: 100%;
   background-color: #013580;
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
